correction cannon ennemies

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
       <div class="body_ennemies">
       	   <div class="fire_enimis"></div>
+      	   <div class="boule"></div>
       </div>
 
       <div class="body_defender">
